axis model development

--- a/index.html
+++ b/index.html
@@ -12,30 +12,24 @@
         <th class="bg-cyan-300">
           <div class="flex flex-col">
             <div>top</div>
-            <div>divs</div>
-            <div>divs</div>
-            <div>divs</div>
-            <div>divs</div>
           </div>
         </th>
-        <th class="">responsive</th>
+        <th class=""></th>
       </tr>
       <tr class="bg-green-300">
         <th class="bg-yellow-300 w-0">
           <div class="flex flex-row-reverse">
             <div>left</div>
-            <div>divs</div>
-            <div>yet another</div>
-            <div>yet another</div>
-            <div>yet another</div>
-            <div>yet another</div>
+            <div>left</div>
+            <div>left</div>
           </div>
         </th>
-        <th class="">middle canvas</th>
+        <th class="">
+          <div>middle</div>
+        </th>
         <th class="bg-yellow-300 w-0">
           <div class="flex flex-row">
             <div>right</div>
-            <div>divs</div>
           </div>
         </th>
       </tr>
@@ -43,10 +37,7 @@
         <th class=""></th>
         <th class="bg-cyan-300">
           <div class="flex flex-col">
-            <div>bottom only one</div>
-            <div>bottom only one</div>
-            <div>bottom only one</div>
-            <div>bottom only one</div>
+            <div>bottom</div>
           </div>
         </th>
         <th class=""></th>
