axis renderers definitions

--- a/index.html
+++ b/index.html
@@ -7,40 +7,30 @@
   </head>
   <body>
     <table id="container" class="w-screen h-screen bg-red-300">
-      <tr class="h-0">
-        <th class=""></th>
-        <th class="bg-cyan-300">
-          <div class="flex flex-col">
-            <div>top</div>
-          </div>
+      <tr class="h-0 p-0 m-0">
+        <th class="p-0 m-0"></th>
+        <th class="p-0 m-0 bg-cyan-300">
+          <div class="flex flex-col-reverse w-full h-full items-stretch p-0 m-0"></div>
         </th>
-        <th class=""></th>
+        <th class="p-0 m-0"></th>
       </tr>
-      <tr class="bg-green-300">
-        <th class="bg-yellow-300 w-0">
-          <div class="flex flex-row-reverse">
-            <div>left</div>
-            <div>left</div>
-            <div>left</div>
-          </div>
+      <tr class="p-0 m-0 bg-green-300">
+        <th class="w-0 p-0 m-0 bg-yellow-300">
+          <div class="flex flex-row-reverse w-full h-full items-stretch p-0 m-0"></div>
         </th>
-        <th class="">
+        <th class="w-full h-full p-0 m-0">
           <div>middle</div>
         </th>
-        <th class="bg-yellow-300 w-0">
-          <div class="flex flex-row">
-            <div>right</div>
-          </div>
+        <th class="w-0 p-0 m-0 bg-yellow-300">
+          <div class="flex flex-row w-full h-full items-stretch p-0 m-0"></div>
         </th>
       </tr>
-      <tr class="h-0">
-        <th class=""></th>
-        <th class="bg-cyan-300">
-          <div class="flex flex-col">
-            <div>bottom</div>
-          </div>
+      <tr class="h-0 p-0 m-0">
+        <th class="p-0 m-0"></th>
+        <th class="p-0 m-0 bg-cyan-300">
+          <div class="flex flex-col w-full h-full items-stretch p-0 m-0"></div>
         </th>
-        <th class=""></th>
+        <th class="p-0 m-0"></th>
       </tr>
     </table>
 
